# notion-calendar-sub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
app/: __init__.py  calendar.py  config.py  domain.py  extract.py  main.py  notion.py
